Update header, main text, and organization

--- a/src/assets/sass/_masthead.scss
+++ b/src/assets/sass/_masthead.scss
@@ -15,7 +15,7 @@
   background-attachment: scroll;
   background-size: cover;
   h1 {
-    font-family: 'Varela Round';
+    font-family: 'Oswald', sans-serif;
     font-size: 3rem;
     line-height: 3rem;
     letter-spacing: 0.8rem;
