--- a/src/assets/sass/_secondaryhead.scss
+++ b/src/assets/sass/_secondaryhead.scss
@@ -16,7 +16,8 @@
   background-attachment: scroll;
   background-size: cover;
   h1 {
-    font-family: 'Varela Round';
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: bold;
     font-size: 3rem;
     line-height: 3rem;
     letter-spacing: 0.8rem;
