--- a/src/assets/sass/grayscale.scss
+++ b/src/assets/sass/grayscale.scss
@@ -14,9 +14,12 @@
 @import './fontawesome/css/all.min.css';
 @import url('https://fonts.googleapis.com/css?family=Varela+Round');
 @import url('https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i');
+@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Prompt:ital,wght@0,100;0,300;0,400;0,600;0,700;1,100&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Nunito%20Sans:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&subset=latin,latin-ext');
+
 
 body {
-  font-family: 'Nunito';
+  font-family: "Nunito Sans", sans-serif;
   letter-spacing: 0.0625em;
 }
 
