--- a/src/assets/sass/_masthead.scss
+++ b/src/assets/sass/_masthead.scss
@@ -3,6 +3,7 @@
   width: 100%;
   height: auto;
   min-height: 35rem;
+  max-height: 80vh;
   padding: 15rem 0;
   background: linear-gradient(
       to bottom,
