--- a/src/assets/sass/_secondaryhead.scss
+++ b/src/assets/sass/_secondaryhead.scss
@@ -3,7 +3,7 @@
   width: 100%;
   height: auto;
   min-height: 35rem;
-  max-height: 45rem;
+  max-height: 60vh;
   padding: 15rem 0;
   background: linear-gradient(
       to bottom,
