--- a/src/assets/sass/grayscale.scss
+++ b/src/assets/sass/grayscale.scss
@@ -61,3 +61,25 @@ footer {
   width: auto;
   max-height: 200px;
 }
+
+.paper {
+  padding: 6px 0px;
+  // color: #505060
+}
+
+.paper-title {
+  font-weight: 900;
+}
+
+.session-place {
+  padding-bottom: 16px;
+}
+
+.session-title, .session-title-link {
+  font-size: 16pt;
+  font-weight: bold;
+}
+
+.session {
+  padding: 8px 0px;
+}
