--- a/src/assets/sass/grayscale.scss
+++ b/src/assets/sass/grayscale.scss
@@ -75,6 +75,11 @@ footer {
   padding-bottom: 16px;
 }
 
+.session-speaker, .session-detail {
+  padding-bottom: 8px;
+  font-style: italic;
+}
+
 .session-title, .session-title-link {
   font-size: 16pt;
   font-weight: bold;
