--- a/src/assets/sass/grayscale.scss
+++ b/src/assets/sass/grayscale.scss
@@ -96,3 +96,10 @@ footer {
 .warning {
   color: black !important
 }
+
+.anchor {
+  display: block;
+  position: relative;
+  top: -100px;
+  visibility: hidden;
+}
